--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Directive by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Directive by HTML5 UP</title>
+		<title>No Limits Fitness</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -33,8 +29,11 @@
 					with your rep counts.</h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
-					etiam vivamus nunc nibh morbi.</p>
-					-->
+					etiam vivamus nunc nibh morbi.</p>-->
+					<ul class="actions">
+						<li><a href="#" class="button">Get Started</a></li>
+					</ul>
+					
 				</header>
 
 				<div class="box alt container">
@@ -211,10 +210,10 @@
 				-->
 
 				<footer class="major container 75%">
-					<h3>Get shady with science</h3>
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<h3>About uS</h3>
+					<p>This application was built by Nida Chaudhry, Gerald Perriman, Chase Eidam, and Ray Shin in Georgia Tech's April 2017 Coding Bootcamp.</p>
 					<ul class="actions">
-						<li><a href="#" class="button">Join our crew</a></li>
+						<li><a href="#" class="button">Meet the Team</a></li>
 					</ul>
 				</footer>
 
@@ -228,8 +227,8 @@
 						<h2>Questions or comments?</h2>
 					</header>
 
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
-					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<!-- <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
+					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>-->
 
 					<form method="post" action="#">
 						<div class="row">
@@ -259,11 +258,11 @@
 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; No Limits. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; No Limits. All rights reserved.</li><li>
 					</ul>
 
 				</div>
