--- a/app.html
+++ b/app.html
@@ -159,28 +159,35 @@
     <div class="section  text-gray" id="section2">
         <div class="container">
             <div class="col-md-12">
-
-
-                <h2 class="title" data-animate="fadeInDown">About us</h2>
-
-                <div class="row">
-
-                    <div class="col-md-8 col-md-offset-2">
-
-                        <p class="text-large text-thin" data-animate="fadeInUp">Five quacking zephyrs jolt my wax bed. Flummoxed by job, kvetching W. zaps Iraq. Cozy sphinx waves quart jug of bad milk. </p>
-                        <p class="text-large text-thin margin-bottom" data-animate="fadeInUp">A very bad quack might jinx zippy fowls. Few quips galvanized the mock jury box. Quick brown dogs jump over the lazy fox. The jay, pig, fox, zebra, and my wolves quack! Blowzy red vixens fight for a quick jump. Joaquin Phoenix
-                            was gazed by MTV for luck. A wizard’s job is to vex chumps quickly in fog. Watch "Jeopardy!", Alex Trebek's fun TV quiz game. Woven silk pyjamas exchanged for blue quartz.</p>
-
-                        <p data-animate="fadeInUp"><img src="img/team.jpg" alt="" class="img-circle img-responsive ondra-michal"></p>
-
+                <form>
+                    <div class="form-group">
+                        <label for="formGroupExampleInput">Your Name</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Your Name">
                     </div>
+                    <div class="form-group">
+                        <label for="formGroupExampleInput2">Exercise</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Exercise">
+                    </div>
+                    <div class="form-group">
+                        <label for="formGroupExampleInput3">Sets</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="Sets">
+                    </div>
+                    <div class="form-group">
+                        <label for="formGroupExampleInput2">Reps</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput4" placeholder="Reps">
+                    </div>
+                </form>
 
-                </div>
+                <p data-animate="fadeInUp"><img src="img/team.jpg" alt="" class="img-circle img-responsive ondra-michal"></p>
 
             </div>
-            <!-- /.12 -->
+
         </div>
-        <!-- /.container -->
+
+    </div>
+    <!-- /.12 -->
+    </div>
+    <!-- /.container -->
     </div>
     <!-- /.section -->
 
